--- a/README
+++ b/README
@@ -1,48 +1,8 @@
-dwm - dynamic window manager
-============================
-dwm is an extremely fast, small, and dynamic window manager for X.
+This is my conifguration for the suckless utility "DWM". 
 
+I have two patches on this build currently
 
-Requirements
-------------
-In order to build dwm you need the Xlib header files.
+1) Full-gaps: Adds an appropriate gap between windows
+2) Switch to tag: Broken at the moment, will eventually configure to make firefox to tag 9(like awesomewm)
 
-
-Installation
-------------
-Edit config.mk to match your local setup (dwm is installed into
-the /usr/local namespace by default).
-
-Afterwards enter the following command to build and install dwm (if
-necessary as root):
-
-    make clean install
-
-
-Running dwm
------------
-Add the following line to your .xinitrc to start dwm using startx:
-
-    exec dwm
-
-In order to connect dwm to a specific display, make sure that
-the DISPLAY environment variable is set correctly, e.g.:
-
-    DISPLAY=foo.bar:1 exec dwm
-
-(This will start dwm on display :1 of the host foo.bar.)
-
-In order to display status info in the bar, you can do something
-like this in your .xinitrc:
-
-    while xsetroot -name "`date` `uptime | sed 's/.*,//'`"
-    do
-    	sleep 1
-    done &
-    exec dwm
-
-
-Configuration
--------------
-The configuration of dwm is done by creating a custom config.h
-and (re)compiling the source code.
+I have added pywal compatibility to this dwm as well. This is not a finshed build.
